new context style and content

--- a/index.html
+++ b/index.html
@@ -68,34 +68,53 @@
                 <h1 id="transition2Context">But how did we know that?</h1>
                 <button class="squirButton" id="transitionButton">Click to find out more!</button>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <h3 class="backgroundLayout" id="dataContext">
-                            In October 2018, 323 squirrel sighters collected data on the squirrels of Central Park. Due
-                            to a reporter’s curiosity on these small furry friends, these individuals set out to
-                            count and tell the story of every squirrel they saw.
-                        </h3>
+            <div class="container contextContainer">
+                <div class="row squirrelCensus">
+                    <div class="col-md-6">
+                        <div class="contextRelative">
+                            <h1>What is the Squirrel Census?</h1>
+                            <p>
+                                The Squirrel Census took place in October 2018, when 323 volunteers collected data on all the squirrels in Central Park.
+                                To organize the project, the census team divided Central Park into 350 hectares. Each census taker roamed a single hectare
+                                for 20 minutes, and they took notes on the squirrels they saw, noting:
+                            </p>
+                                <ul style="margin-bottom:2px;">
+                                    <li>Fur Color</li>
+                                    <li>Sounds</li>
+                                    <li>Tail Twitches</li>
+                                    <li>Activities</li>
+                                    <li>Interactions with Humans</li>
+                                    <li>Age</li>
+                                    <li>Time of Sighting</li>
+                                    <li>Fun stories about squirrels</li>
+                                </ul>
+                            <p>
+                                ...and much more.
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-md-7"></div>
+                    <div class="col-md-6"></div>
                 </div>
-                <div class="row">
-                    <div class="col-md-7"></div>
-                    <div class="col-md-5">
-                        <h3 class="backgroundLayout" id="historicalContext">
-                            Before 1877, there were no squirrels in Central Park. However, they released 60-70
-                            squirrels from 1877 to 1878 and let them roam around.
-                            <br>
-                            By 1883, there were 1,500 squirrels calling Central Park home. Now the park hosts 2,373
-                            squirrels.
-                        </h3>
+                <div class="row projectInfo">
+                    <div class="col-md-5"></div>
+                    <div class="col-md-7">
+                        <p style="text-align: right;">
+                            For our project, we wanted to tackle a light-hearted topic that would re-inspire delight in nature, particularly due to the mundane routine of pandemic life.
+                            <br>Thus, we chose to analyze the Squirrel Census.
+                        </p>
+                        <p style="margin-top:10px; text-align: right; font-weight: bolder;">
+                            Join us in learning more about the census takers' delightful experiences and the rambunctious squirrels of Central Park.
+                        </p>
                     </div>
                 </div>
             </div>
-            <button class="squirButton" id="nextButtonHistorical">NEXT</button>
-            <button class="squirButton" id="goBack">GO BACK</button>
         </div>
 
+<!--        Before 1877, there were no squirrels in Central Park. However, they released 60-70-->
+<!--        squirrels from 1877 to 1878 and let them roam around.-->
+<!--        <br>-->
+<!--        By 1883, there were 1,500 squirrels calling Central Park home. Now the park hosts 2,373-->
+<!--        squirrels.-->
 
         <!-- Rising Insights: Map and Stories Vis -->
         <div class="row section" id="mainMessage">
