--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     <li>Interactions with Humans</li>
                                     <li>Age</li>
                                     <li>Time of Sighting</li>
-                                    <li>Fun stories about squirrels</li>
+                                    <li>Fun Stories About the Squirrels</li>
                                 </ul>
                             <p>
                                 ...and much more.
