add about us images and take a walk in the park section

--- a/index.html
+++ b/index.html
@@ -527,16 +527,46 @@
 
         <!--    Call to Action: Conclusion    -->
         <div class="row section" id="conclusion">
-            <div class="col-md-12">
-                <h1>Wherever you are, take a walk and pay attention to the wildlife around you. It just might make your day!</h1>
+            <div class="row">
+                <div class="col-md-5">
+                    <img id="conclusion-tree" src="images/tree.png" alt="Tree">
+                    <img id="conclusion-squirrel" src="images/squirrel1.png" alt="Squirrel 1">
+                </div>
+                <div class="col-md-7">
+                    <h1 id="conclusion-message">Wherever you are, take a walk and pay attention to the wildlife around you. It just might make your day!</h1>
+                </div>
             </div>
         </div>
 
         <!--    About Us    -->
         <div class="row section" id="lastSection">
-            <div class="col-md-12">
-                <div id="aboutUs"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="mugshot centerItems" src="images/jada.png" alt="Jada Lee">
+                        <h1 class="centerItems">Jada Lee</h1>
+                        <p>I'm pretty sure I was a plant in a past life. Specifically an apple tree.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img class="mugshot centerItems" src="images/lizzy.png" alt="Elizabeth Ling">
+                        <h1 class="centerItems">Lizzy Ling</h1>
+                        <p>I'm pretty sure I was a animal in a past life. Specifically a cinnamon squirrel.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img class="mugshot centerItems" src="images/iris.png" alt="Iris Su">
+                        <h1 class="centerItems">Iris Su</h1>
+                        <p>I'm pretty sure I was a dog in a past life. Specifically a dog that chases squirrels.</p>
+                    </div>
+                </div>
             </div>
+        </div>
+
+        <!--    Sources    -->
+        <div class="row section" id="sources">
+            <div class="row">
+
+            </div>
+
         </div>
 
     </div>
