took out sankey diagram, added sources section

--- a/index.html
+++ b/index.html
@@ -397,19 +397,6 @@
             </div>
         </div>
 
-        <!-- Main Message: Sankey Diagram -->
-        <div class="row section" id="sankeyVis">
-            <!--      Title and Description      -->
-            <div class="sentimentDescription">
-                <h2 class="centerText squirrelMapTitle">The squirrels exhibited patterns in their behavior</h2>
-                <p class="squirrelMapCaption centerText">For example, squirrels that chased other squirrels were also more likely to run from humans</p>
-            </div>
-            <div class="col-md-12">
-                <!--        PUT VISUALIZATIONS HERE       -->
-                <div id="sankey_vis"></div>
-            </div>
-        </div>
-
         <!--    Call to Action: Quotes    -->
         <div class="row section" id="quotesInfo">
             <div class="centerItems">
@@ -564,7 +551,7 @@
         <!--    Sources    -->
         <div class="row section" id="sources">
             <div class="row">
-
+                <h1>Sources</h1>
             </div>
 
         </div>
@@ -614,7 +601,7 @@
 <script>
     new fullpage('#fullpage', {
         // options here
-        anchors: ['Home', 'firstPage', 'secondPage', '3rdPage', '4thPage', '5thPage', '6thPage', '7thPage', '8thPage', '9thPage', '10thPage', '11thPage', 'About-Us'],
+        anchors: ['Home', 'firstPage', 'secondPage', '3rdPage', '4thPage', '5thPage', '6thPage', '7thPage', '8thPage', '9thPage', '10thPage', 'AboutUs', 'Sources'],
         // autoScrolling false because story boxes need vertical scrolling
         autoScrolling: false,
         scrollingSpeed: 1000,
@@ -622,7 +609,7 @@
         slidesNavigation: true,
         navigation: true,
         navigationPosition: 'right',
-        navigationTooltips: ['Home', 'Guess Squirrels', 'Census Info', 'Map Vis', 'Story Sentiments', 'Stories Word Map', 'Squirrel Trivia', 'Bubble Map', 'Sankey Diagram', 'Quotes', 'Walk in Central Park', 'Conclusion', 'About Us']
+        navigationTooltips: ['Home', 'Guess Squirrels', 'Census Info', 'Map Vis', 'Story Sentiments', 'Stories Word Map', 'Squirrel Trivia', 'Bubble Map', 'Quotes', 'Walk in Central Park', 'Conclusion', 'About Us', 'Sources']
     });
 </script>
 
