--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- CSS libraries -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/fullpage.js/dist/fullpage.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.css" />
 
     <!--  Leaflet CSS  -->
     <link rel="stylesheet" href="css/leaflet.css">
@@ -571,7 +571,7 @@
 <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
 
 <!-- Fullpage Stepper -->
-<script type="text/javascript" src="node_modules/fullpage.js/dist/fullpage.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.js"></script>
 
 <!-- Slick Carousel -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
