changed sources id

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
         </div>
 
         <!--    Sources    -->
-        <div class="row section" id="sources">
+        <div class="row section" id="sourcesPage">
             <div class="row">
                 <h1>Sources</h1>
             </div>
