updated website title in the head

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Squirrels Rool</title>
+    <title>Squirrels in the City</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,700,800" rel="stylesheet">
 
