placed quotesTitle at top

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
         <!--    Call to Action: Quotes    -->
         <div class="row section" id="quotesInfo">
-            <div class="centerItems quotesBox" id="quotesTitle">
+            <div class="centerItemsQuotes quotesBox" id="quotesTitle">
                 <h4 id="transition2Quotes" class="centerText">For the census-takers, squirrel-watching was a highly enjoyable experience.</h4>
                 <button class="squirButton" id="quotesTransition">Click to find out more!</button>
             </div>
